force-app/main/default/objects/DFIRegistration__c/DFIRegistration__c.object-meta.xml
<CustomObject>
    <description>PacPoint-MV021120 - Created for DFI phase 1. Used to be able to apply a payment when subscribing for an event</description>
    <label>DFI Registration</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFI Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>