force-app/main/default/objects/DFIRegistration__c/fields/AcknowledgementNoDuties__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementNoDuties__c</fullName>
    <defaultValue>&quot;Note:If the company&apos;s application is rejected, the $1,000 paid for Participation Year 1 will be refunded.&quot;</defaultValue>
    <label>No Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>