force-app/main/default/objects/DFIRegistration__c/fields/Acknowledgementof35Fee__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgementof35Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV021120 - Created for DFI phase 1.</description>
    <inlineHelpText>I acknowledge that there is a $35 fee that must be paid upon submission of this application and it is all inclusive of the event with lunch.</inlineHelpText>
    <label>Acknowledgement of $35 Fee</label>
    <type>Checkbox</type>
</CustomField>