force-app/main/default/objects/DFIRegistration__c/fields/AcknowledgementOfTotalFees__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementOfTotalFees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: RdG - Case 7975 - For Payment Collection Year 3 - This field will be on the DFI Registration community page.</description>
    <label>No Name</label>
    <type>Checkbox</type>
</CustomField>