force-app/main/default/objects/DFIRegistration__c/fields/AcknowledgementStatement__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgementStatement__c</fullName>
    <defaultValue>&quot;Acknowledge payment of $5,000 for 2022-2023 Participation Fee.&amp;nbsp;&quot;</defaultValue>
    <label>No Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>