force-app/main/default/objects/DFIRegistration__c/fields/Areyouattending__c.field-meta.xml
<CustomField>
    <fullName>Areyouattending__c</fullName>
    <description>PacPoint-MV021120 - Created for DFI phase 1.</description>
    <label>Are you attending?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I am coming</fullName>
                <default>true</default>
                <label>Yes, I am coming</label>
            </value>
            <value>
                <fullName>Sorry, I cannot attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>