force-app/main/default/objects/DFIRegistration__c/fields/CommunityPaymentContactUsText__c.field-meta.xml
<CustomField>
    <fullName>CommunityPaymentContactUsText__c</fullName>
    <defaultValue>&quot;Contact us at (808) 586-2820; dfi@dcca.hawaii.gov &quot;</defaultValue>
    <description>PacPoint-CL06082022 - Created for case 00021989</description>
    <label>No Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>