force-app/main/default/objects/DFIRegistration__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>PacPoint-MV021120 - Created for DFI phase 1.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>