force-app/main/default/objects/DFIRegistration__c/fields/Dietaryrestrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietaryrestrictions__c</fullName>
    <description>PacPoint-MV021220 - Created for DFI phase 1.</description>
    <label>Dietary restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Gluten-free</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>