force-app/main/default/objects/DFIRegistration__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <description>PacPoint-MV021220 - Created for DFI phase 1.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>