force-app/main/default/objects/DFIRegistration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>PacPoint: RdG</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFI Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>