force-app/main/default/objects/DFIRegistration__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>PacPoint-MV021220 - Created for DFI phase 1.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>