force-app/main/default/objects/DFIRegistration__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>PacPoint-MV021320 - Created for DFI phase 1.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>