force-app/main/default/objects/DFIRegistration__c/fields/Notificationsaboutfutureevents__c.field-meta.xml
<CustomField>
    <fullName>Notificationsaboutfutureevents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV021320 - Created for DFI phase 1.</description>
    <inlineHelpText>Notifications will be sent out for any future events that are related to the Digital Currency Innovation Lab.</inlineHelpText>
    <label>Notifications about future events?</label>
    <type>Checkbox</type>
</CustomField>