force-app/main/default/objects/DFIRegistration__c/fields/OtherDietaryRestrictions__c.field-meta.xml
<CustomField>
    <fullName>OtherDietaryRestrictions__c</fullName>
    <description>PacPoint-MV021120 - Created for DFI phase 1.</description>
    <label>Other - Dietary Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>