force-app/main/default/objects/DFIRegistration__c/validationRules/FeeAcknowledgement.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeAcknowledgement</fullName>
    <active>true</active>
    <description>PacPoint-MV021320 - Created for DFI phase 1.</description>
    <errorConditionFormula>IF(
 NOT(AcknowledgementOfTotalFees__c) &amp;&amp; NOT(Acknowledgementof35Fee__c ) , 
 true, 
 false
)</errorConditionFormula>
    <errorMessage>Please acknowledge the fee cost</errorMessage>
</ValidationRule>