force-app/main/default/objects/DFIRegistration__c/listViews/All_Digital_Currency_Innovation_Regist.listView-meta.xml
<ListView>
    <fullName>All_Digital_Currency_Innovation_Regist</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>CompanyName__c</columns>
    <columns>Areyouattending__c</columns>
    <columns>EmailAddress__c</columns>
    <columns>Dietaryrestrictions__c</columns>
    <columns>OtherDietaryRestrictions__c</columns>
    <columns>Notificationsaboutfutureevents__c</columns>
    <columns>Acknowledgementof35Fee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event__c</columns>
    <columns>AcknowledgementNoDuties__c</columns>
    <columns>AcknowledgementStatement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Digital Currency Innovation Regist.</label>
</ListView>