force-app/main/default/objects/DFIRegistration__c/listViews/Digital_Currency_Innovation_App_Program.listView-meta.xml
<ListView>
    <fullName>Digital_Currency_Innovation_App_Program</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>DFI Registration</value>
    </filters>
    <label>Digital Currency Innovation App/Program</label>
</ListView>